editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__struct_named.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(status = 404)]
struct Named {
    field: String,
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for Named {
    const LABEL: &'static str = "Named";
    fn status(&self) -> axum::http::StatusCode {
        axum::http::StatusCode::from_u16(404u16).unwrap()
    }
    fn context(&self) -> std::collections::HashMap<String, serde_json::Value> {
        std::collections::HashMap::from([])
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        Vec::from([
            crate::views::error::OpenApiResponse {
                variant: None,
                message_template: None,
                status: axum::http::StatusCode::from_u16(404u16).unwrap(),
                context: Vec::from([]),
            },
        ])
    }
}
impl utoipa::IntoResponses for Named {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for Named {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
