editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__struct_named_with_context.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(status = 404, context)]
struct NamedWithContext {
    cause: String,
    fix: String,
    incident_id: u64,
}

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for NamedWithContext {
    const LABEL: &'static str = "NamedWithContext";
    fn status(&self) -> axum::http::StatusCode {
        axum::http::StatusCode::from_u16(404u16).unwrap()
    }
    fn context(&self) -> std::collections::HashMap<String, serde_json::Value> {
        std::collections::HashMap::from([
            (
                "cause".to_owned(),
                serde_json::to_value(cause).expect("failed to serialize context value"),
            ),
            (
                "fix".to_owned(),
                serde_json::to_value(fix).expect("failed to serialize context value"),
            ),
            (
                "incident_id".to_owned(),
                serde_json::to_value(incident_id)
                    .expect("failed to serialize context value"),
            ),
        ])
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        Vec::from([
            crate::views::error::OpenApiResponse {
                variant: None,
                message_template: None,
                status: axum::http::StatusCode::from_u16(404u16).unwrap(),
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "cause",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                    crate::views::error::ContextEntry {
                        key: "fix",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                    crate::views::error::ContextEntry {
                        key: "incident_id",
                        schema: <u64 as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ])
    }
}
impl utoipa::IntoResponses for NamedWithContext {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for NamedWithContext {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
