editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__struct_tuple_with_context.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(status = 404, context)]
struct TupleWithContext(String, u32);

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for TupleWithContext {
    const LABEL: &'static str = "TupleWithContext";
    fn status(&self) -> axum::http::StatusCode {
        axum::http::StatusCode::from_u16(404u16).unwrap()
    }
    fn context(&self) -> std::collections::HashMap<String, serde_json::Value> {
        std::collections::HashMap::from([
            (
                "_0".to_owned(),
                serde_json::to_value(_0).expect("failed to serialize context value"),
            ),
            (
                "_1".to_owned(),
                serde_json::to_value(_1).expect("failed to serialize context value"),
            ),
        ])
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        Vec::from([
            crate::views::error::OpenApiResponse {
                variant: None,
                message_template: None,
                status: axum::http::StatusCode::from_u16(404u16).unwrap(),
                context: Vec::from([
                    crate::views::error::ContextEntry {
                        key: "_0",
                        schema: <String as utoipa::PartialSchema>::schema(),
                    },
                    crate::views::error::ContextEntry {
                        key: "_1",
                        schema: <u32 as utoipa::PartialSchema>::schema(),
                    },
                ]),
            },
        ])
    }
}
impl utoipa::IntoResponses for TupleWithContext {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for TupleWithContext {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
