editoast/editoast_derive/src/snapshots/editoast_derive__view_error__tests__struct_unit_with_context.snap
---
source: editoast_derive/src/view_error.rs
---
// Source
// -----------------------------------------------------------------------------

#[view_error(context)]
struct UnitWithContext;

// Macro expansion
// -----------------------------------------------------------------------------

impl crate::views::error::ViewError for UnitWithContext {
    const LABEL: &'static str = "UnitWithContext";
    fn status(&self) -> axum::http::StatusCode {
        axum::http::StatusCode::INTERNAL_SERVER_ERROR
    }
    fn context(&self) -> std::collections::HashMap<String, serde_json::Value> {
        std::collections::HashMap::from([])
    }
    fn responses() -> Vec<crate::views::error::OpenApiResponse> {
        Vec::from([
            crate::views::error::OpenApiResponse {
                variant: None,
                message_template: None,
                status: axum::http::StatusCode::INTERNAL_SERVER_ERROR,
                context: Vec::from([]),
            },
        ])
    }
}
impl utoipa::IntoResponses for UnitWithContext {
    fn responses() -> std::collections::BTreeMap<
        String,
        utoipa::openapi::RefOr<utoipa::openapi::response::Response>,
    > {
        <Self as crate::views::error::ViewError>::utoipa_responses().into()
    }
}
impl axum::response::IntoResponse for UnitWithContext {
    fn into_response(self) -> axum::response::Response {
        <Self as crate::views::error::ViewError>::into_response(self)
    }
}
